--- a/src/IS4/appsettings.json
+++ b/src/IS4/appsettings.json
@@ -1,41 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=_CHANGE_ME;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
-  "Serilog": {
-    "Using": [],
-    "MinimunLevel": {
-      "Default": "Information",
-      "Override": {
-        "Microsoft.Hosting.Lifetime": "Debug",
-        "IdentityServer4": "Debug",
-        "IdenityModel": "Debug",
-        "Microsoft": "Warning",
-        "System": "Warning", 
-        "Microsoft.AspNetCore": "LogEventLevel.Debug"
-      }
-    },
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithProcessId", "WithThreadId" ],
-    "WriteTo": [
-      {
-        "Name": "Console"
-      },
-      {
-        "Name": "File",
-        "Args": {
-          "path": "..\\Logs\\IS4\\IS4.log",
-          "outTemplate": "\n{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}]{NewLine}{SourceContext}{NewLine}{Message:lj}{NewLine}{Properties:j}{NewLine}{Exception}{NewLine}"
-        }
-      },
-      {
-        "Name": "File",
-        "Args": {
-          "path": "..\\Logs\\IS4\\IS4.json",
-          "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog",
-          "outTemplate": "\n{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}]{NewLine}{SourceContext}{NewLine}{Message:lj}{NewLine}{Properties:j}{NewLine}{Exception}{NewLine}"
-        }
-      },
-      "Providers(Providers)"
-    ]
+    "DefaultConnection": "Data Source=AspIdUsers.db;"
   }
 }
