--- a/src/IdApi/appsettings.json
+++ b/src/IdApi/appsettings.json
@@ -1,10 +1,73 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "Microsoft": "Debug",
-      "Microsoft.Hosting.Lifetime": "Debug"
-    }
+  "AppURLS": {
+    "IdManagementBaseUrl": "https://localhost:5002",
+    "IdApiBaseUrl": "https://localhost:6001",
+    "IS4BaseUrl": "https://localhost:5001"
   },
-  "AllowedHosts": "*"
+  "ApplicationNames": {
+    "IdManagementName": "Identity Management",
+    "IdApiName": "Identity Api",
+    "IS4Name": "Identity Server 4"
+  },
+  "ApplicationIds": {
+    "IdManagementId": "IdManagement",
+    "IdApiId": "IdApi",
+    "IS4Id": "IS4"
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Warning",
+        "Microsoft.AspNetCore": "Warning",
+        "Microsoft.AspNetCore.Diagnostics.ExceptionHandlerMiddleware": "Fatal",
+        "Microsoft.Hosting.Lifetime": "Debug"
+      }
+    },
+    "Filter": [
+      {
+        "Name": "ByExcluding",
+        "Args": [
+          { "expression": "RequestPath = '/lib/*' and StatusCode = 200" },
+          { "expression": "RequestPath = '/js' and StatusCode = 200" },
+          { "expression": "RequestPath = '/css' and StatusCode = 200" }
+        ]
+      }
+    ],
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "..\\Logs\\IdApi\\IdApi.log",
+          "restrictedToMinimumLevel": "Debug",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Properties}{NewLine}{Exception}\n",
+          "formatter": "Serilog.Formatting.Json.JsonValueFormatter(renderMessage: true), Serilog",
+          "fileSizeLimitBytes": 10773741824,
+          "levelSwitches": { "null": "InitialLevel" },
+          "buffered": false,
+          "shared": false,
+          "flushToDiskInterval": null,
+          "rollingInterval": "Day",
+          "rollOnFileSizeLimit": false,
+          "retainedFileCountLimit": 31
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext"
+    ]
+  },
+  "Properties": {
+    "ApplicationName": "SystemsDesignLogin",
+    "SharedAuthCookie": "IS4SDAC",
+    "SharedAntiForgCookie": "IS4SDRAF",
+    "SharedSessionCookie": "IS4SDSC",
+    "Domain": "SystemsDesign.rocks"
+  },
+  "CookieExpireSeconds": 600
 }
