--- a/src/IdApi/appsettings.json
+++ b/src/IdApi/appsettings.json
@@ -69,5 +69,10 @@
     "SharedSessionCookie": "IS4SDSC",
     "Domain": "SystemsDesign.rocks"
   },
-  "CookieExpireSeconds": 600
+  "CookieExpireSeconds": 600,
+  "SwaggerOptions": {
+    "JsonRoute": "/swagger/{documentName}/swagger.json",
+    "Description": "IdApi",
+    "UIEndpoint": "v1/swagger.json"
+  }
 }
