Finished moving data access (UserManager) from IdManagement to IdApi

--- a/src/IdApi/appsettings.json
+++ b/src/IdApi/appsettings.json
@@ -2,7 +2,8 @@
   "AppURLS": {
     "IdManagementBaseUrl": "https://localhost:5002",
     "IdApiBaseUrl": "https://localhost:6001",
-    "IS4BaseUrl": "https://localhost:5001"
+    "IS4BaseUrl": "https://localhost:5001",
+    "PublicError":  "https://localhost:5002/Error/Error"
   },
   "ApplicationNames": {
     "IdManagementName": "Identity Management",
