--- a/src/IdApi/IdApi.csproj
+++ b/src/IdApi/IdApi.csproj
@@ -30,6 +30,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <PackageReference Include="Swashbuckle.Core" Version="5.6.0" />
     <PackageReference Include="System.Json" Version="4.7.1" />
+    <PackageReference Include="System.Linq" Version="4.3.0" />
     <PackageReference Include="System.Net.Http.Json" Version="3.2.1" />
   </ItemGroup>
 
