Add MainClient, linking from IdManagement Client to MainClient. User can now navigate to and from both client apps

--- a/src/IS4/appsettings.json
+++ b/src/IS4/appsettings.json
@@ -6,27 +6,29 @@
     "IdManagementBaseUrl": "https://localhost:5002",
     "IdApiBaseUrl": "https://localhost:6001",
     "IS4BaseUrl": "https://localhost:5001",
-    "PublicError": "https://localhost:5002/Error/Error"
+    "MainClientBaseUrl": "https://localhost:443"
   },
   "ApplicationNames": {
     "IdManagementName": "Identity Management",
     "IdApiName": "Identity Api",
-    "IS4Name": "Identity Server 4"
+    "IS4Name": "Identity Server 4",
+    "MainClient": "Systems Design"
   },
   "ApplicationIds": {
     "IdManagementId": "IdManagement",
     "IdApiId": "IdApi",
-    "IS4Id": "IS4"
+    "IS4Id": "IS4",
+    "MainClient": "MainClient"
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.File" ],
     "MinimumLevel": {
       "Default": "Debug",
       "Override": {
-        "Microsoft": "Information",
-        "System": "Warning",
-        "Microsoft.AspNetCore": "Warning",
-        "Microsoft.AspNetCore.Diagnostics.ExceptionHandlerMiddleware": "Error",
+        "Microsoft": "Debug",
+        "System": "Debug",
+        "Microsoft.AspNetCore": "Debug",
+        "Microsoft.AspNetCore.Diagnostics.ExceptionHandlerMiddleware": "Debug",
         "Microsoft.Hosting.Lifetime": "Debug"
       }
     },
@@ -48,7 +50,7 @@
         "Name": "File",
         "Args": {
           "path": "..\\Logs\\IS4\\IS4.log",
-          "restrictedToMinimumLevel": "Information",
+          "restrictedToMinimumLevel": "Debug",
           "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Properties}{NewLine}{Exception}\n",
           "formatter": "Serilog.Formatting.Json.JsonValueFormatter(renderMessage: true), Serilog",
           "fileSizeLimitBytes": 10773741824,
@@ -73,5 +75,10 @@
     "SharedSessionCookie": "IS4SDSC",
     "Domain": "SystemsDesign.rocks"
   },
-  "CookieExpireSeconds": 600
+  "LifeTimes": {
+    "SessionCookieExpireSeconds": 600,
+    "AuthCookieExpireSeconds": 600,
+    "TokenExpireSeconds": 540
+  }
+
 }
