--- a/src/IdApi/appsettings.json
+++ b/src/IdApi/appsettings.json
@@ -1,9 +1,10 @@
 {
   "AppURLS": {
+    "MainClientBaseUrl": "https://localhost:443",
     "IdManagementBaseUrl": "https://localhost:5002",
     "IdApiBaseUrl": "https://localhost:6001",
     "IS4BaseUrl": "https://localhost:5001",
-    "PublicError":  "https://localhost:5002/Error/Error"
+    "PublicError": "https://localhost:5002/Error/Error"
   },
   "ApplicationNames": {
     "IdManagementName": "Identity Management",
@@ -70,7 +71,11 @@
     "SharedSessionCookie": "IS4SDSC",
     "Domain": "SystemsDesign.rocks"
   },
-  "CookieExpireSeconds": 600,
+  "LifeTimes": {
+    "SessionCookieExpireSeconds": 600,
+    "AuthCookieExpireSeconds": 600,
+    "TokenExpireSeconds": 540
+  },
   "SwaggerOptions": {
     "JsonRoute": "/swagger/{documentName}/swagger.json",
     "Description": "IdApi",
