--- a/src/IdManagement/appsettings.json
+++ b/src/IdManagement/appsettings.json
@@ -1,5 +1,6 @@
 {
   "AppURLS": {
+    "MainClientBaseUrl": "https://localhost:443",
     "IdManagementBaseUrl": "https://localhost:5002",
     "IdApiBaseUrl": "https://localhost:6001",
     "IS4BaseUrl": "https://localhost:5001",
@@ -70,5 +71,9 @@
     "SharedSessionCookie": "IS4SDSC",
     "Domain": "SystemsDesign.rocks"
   },
-  "CookieExpireSeconds":  600
+  "LifeTimes": {
+    "SessionCookieExpireSeconds": 600,
+    "AuthCookieExpireSeconds": 600,
+    "TokenExpireSeconds": 540
+  }
 }
