--- a/src/IdManagement/Properties/launchSettings.json
+++ b/src/IdManagement/Properties/launchSettings.json
@@ -10,14 +10,14 @@
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "IdManagement": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "environmentVariables": {
         "SECRETS_PATH": "C:\\Secrets\\AppSecrets.json",
         "ASPNETCORE_ENVIRONMENT": "Development"
