Changed setting for staging server

--- a/src/IS4/appsettings.json
+++ b/src/IS4/appsettings.json
@@ -73,12 +73,13 @@
     "SharedAuthCookie": "IS4SDAC",
     "SharedAntiForgCookie": "IS4SDRAF",
     "SharedSessionCookie": "IS4SDSC",
+    "IdManagementSessionCookie": "IS4SDIDMSC",
     "Domain": "SystemsDesign.rocks"
   },
   "LifeTimes": {
-    "SessionCookieExpireSeconds": 600,
-    "AuthCookieExpireSeconds": 600,
-    "TokenExpireSeconds": 540
+    "SessionCookieExpireSeconds": 3600,
+    "AuthCookieExpireSeconds": 3600,
+    "TokenExpireSeconds": 1800
   }
 
 }
