--- a/src/IdApi/appsettings.json
+++ b/src/IdApi/appsettings.json
@@ -25,7 +25,7 @@
         "System": "Warning",
         "Microsoft.AspNetCore": "Warning",
         "Microsoft.AspNetCore.Diagnostics.ExceptionHandlerMiddleware": "Fatal",
-        "Microsoft.Hosting.Lifetime": "Debug"
+        "Microsoft.Hosting.Lifetime": "Information"
       }
     },
     "Filter": [
@@ -45,8 +45,8 @@
       {
         "Name": "File",
         "Args": {
-          "path": "..\\Logs\\IdApi\\IdApi.log",
-          "restrictedToMinimumLevel": "Debug",
+          "path": ".\\Logs\\IdApi.log",
+          "restrictedToMinimumLevel": "Information",
           "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Properties}{NewLine}{Exception}\n",
           "formatter": "Serilog.Formatting.Json.JsonValueFormatter(renderMessage: true), Serilog",
           "fileSizeLimitBytes": 10773741824,
@@ -69,12 +69,13 @@
     "SharedAuthCookie": "IS4SDAC",
     "SharedAntiForgCookie": "IS4SDRAF",
     "SharedSessionCookie": "IS4SDSC",
+    "IdManagementSessionCookie":  "IS4SDIDMSC",
     "Domain": "SystemsDesign.rocks"
   },
   "LifeTimes": {
-    "SessionCookieExpireSeconds": 600,
-    "AuthCookieExpireSeconds": 600,
-    "TokenExpireSeconds": 540
+    "SessionCookieExpireSeconds": 3600,
+    "AuthCookieExpireSeconds": 3600,
+    "TokenExpireSeconds": 1800
   },
   "SwaggerOptions": {
     "JsonRoute": "/swagger/{documentName}/swagger.json",
