--- a/src/IdManagement/appsettings.json
+++ b/src/IdManagement/appsettings.json
@@ -45,7 +45,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "..\\Logs\\IdManagement\\IdManagement.log",
+          "path": ".\\Logs\\IdManagement.log",
           "restrictedToMinimumLevel": "Information",
           "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Properties}{NewLine}{Exception}\n",
           "formatter": "Serilog.Formatting.Json.JsonValueFormatter(renderMessage: true), Serilog",
@@ -69,11 +69,12 @@
     "SharedAuthCookie": "IS4SDAC",
     "SharedAntiForgCookie": "IS4SDRAF",
     "SharedSessionCookie": "IS4SDSC",
+    "IdManagementSessionCookie": "IS4SDIDMSC",
     "Domain": "SystemsDesign.rocks"
   },
   "LifeTimes": {
-    "SessionCookieExpireSeconds": 600,
-    "AuthCookieExpireSeconds": 600,
-    "TokenExpireSeconds": 540
+    "SessionCookieExpireSeconds": 3600,
+    "AuthCookieExpireSeconds": 3600,
+    "TokenExpireSeconds": 1800
   }
 }
