--- a/src/IdManagement/appsettings.json
+++ b/src/IdManagement/appsettings.json
@@ -14,7 +14,8 @@
   "ApplicationIds": {
     "IdManagementId": "IdManagement",
     "IdApiId": "IdApi",
-    "IS4Id": "IS4"
+    "IS4Id": "IS4",
+    "MainClient": "MainClient"
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.File" ],
