--- a/src/IS4/Properties/launchSettings.json
+++ b/src/IS4/Properties/launchSettings.json
@@ -16,11 +16,10 @@
     },
     "IS4": {
       "commandName": "Project",
-      "commandLineArgs": "\"/seed=false\"",
       "environmentVariables": {
         "SECRETS_PATH": "C:\\Secrets\\AppSecrets.json",
         "SECRETS_DIR": "C:\\Secrets\\",
-        "ASPNETCORE_ENVIRONMENT": "Developement"
+        "ASPNETCORE_ENVIRONMENT": "Production"
       },
       "applicationUrl": "https://localhost:5001"
     }
